--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:wght@500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header id="main" class="header">
         <div class="bg">
         </div>
         <div class="container">
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="flex">
                 <div class="left">
-                    <h2>Контакты</h2>
+                    <h2 style="font-size: 64px;">Контакты</h2>
                     <ul class="contact-list">
                         <li>
                             Татьяна - продавец-консультант <br>
@@ -101,7 +101,7 @@
                     </ul>
                 </div>
                 <div class="right">
-                    <h2>Адреса</h2>
+                    <h2 style="font-size: 64px;">Адреса</h2>
                     <ul class="contact-list">
                         <li>
                             Москва,<br> ул. Павла Поповича, д. 13
@@ -146,13 +146,13 @@
     </section>
     <footer class="footer">
         <div class="container">
-            <div class="flex">
+            <div class="flex ai">
                 <div class="group">
                     <div class="name">
                         Винный дом
                     </div>
                     <ul class="footer-list">
-                        <li><a href="#">Главная</a></li>
+                        <li><a href="#main">Главная</a></li>
                         <li><a href="#about">О нас</a></li>
                         <li><a href="#catalog">Каталог</a></li>
                         <li><a href="#contact">Контакты</a></li>
